@@ -73,7 +73,9 @@ public interface DVector3C {
 	 */
 	public double dot(DVector3View b);
 
-    /** 
+	public DVector3 reAdd(DVector3C v2);
+	public DVector3 reAdd(double x, double y, double z);
+	/**
      * @param v2 other vector
      * @return return difference of (this)-v2
      * @see DVector3#reSub(DVector3C) 
